# opensky

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  ISSUES.md  LAUNCH-READINESS-PLAN.md  LAUNCH_READINESS_PLAN.md  LAUNCH_READINESS_REVISION_2.md  README.md  RELEASING.md  SECURITY.md  index.html  main.py  pyproject.toml  render.staging.yaml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  production-smoke.yml  release.yml
.next/: trace  trace-build
api/: .env.example  Dockerfile  alert_worker.py  cron_routes.py  docker-compose.yml  main.py  requirements.txt  zone_alert_worker.py
api/.next/: trace  trace-build
api/tests/: conftest.py  test_booking_links.py  test_health.py  test_parse.py  test_security_hardening.py
docs/: slo.md
docs/runbooks/: degraded-dependencies.md  deploy.md  incident-response.md  rollback.md
scripts/: smoke-test.sh
src/opensky/: __init__.py  __main__.py  cache.py  cli.py  config.py  display.py  models.py  safety.py  search.py
src/opensky/data/: conflict_zones.json  demo_flights.json  demo_flights_converted.json
src/opensky/providers/: __init__.py  amadeus.py  duffel.py  (+2 more)
src/skyroute/: __init__.py  __main__.py  cache.py  cli.py  config.py  display.py  models.py  safety.py  search.py
tests/: test_cache.py  test_cli.py  test_compat.py  test_config.py  test_dedup.py  test_display.py  test_integration.py  test_models.py  test_providers.py  test_safety.py  test_vendor.py  utils.py
tests/quality/: RESULTS-suite-A-2026-03-14.md  RESULTS-suite-B-2026-03-14.md  RESULTS-suite-C-2026-03-14.md  RESULTS-suite-D-2026-03-14.md  TEST-PLAN.md
web/: .env.example  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  sync_safety_translations.py  vitest.setup.ts
web/__tests__/: home.test.tsx  location-matching.test.ts  og.test.ts
web/app/: SearchPage.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: AirlineFilter.tsx  AirportAutocomplete.tsx  AnalyticsProvider.tsx  CloudsBackground.tsx  CookieConsent.tsx  CurrencyProvider.tsx  SavedSearches.tsx  SiteFooter.tsx  SiteHeader.tsx  TableOfContents.tsx  ThemeProvider.tsx  ThemeToggle.tsx
web/i18n/: config.ts  request.ts
web/lib/: airports.ts  analytics.ts  backend-api.ts  flight-types.ts  route-cache.ts  routes.ts  theme-script.ts
web/messages/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  tr.json  zh.json
web/public/: llms-full.txt  llms.txt  site.webmanifest
(+57 files in other folders)
